--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -5,14 +5,18 @@
     min-height: 15vh;
     height: auto;
   }
+  .logo-container {
+    background-color: white;
+    width: 260px;
+  }
   .logo {
-    height: 143px;
-    width: 163px;
+    width: 260px;
+    margin-bottom: 1rem;
   }
   .footerLinkTitle {
     font-weight: '700';
     color: #bec1cc;
-    font-size: 1.2rem;
+    font-size: 1.8rem;
     margin: 20px 0
   }
   .footerLink {
