--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -35,6 +35,7 @@
     }
   }
   .footer {
+    padding: 115px 0 50px 0;
     align-items: center;
     display: flex;
     flex-direction: 'column';
