--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background: #4e3b80;
+    background: #6A3BC4;
     padding: 20px;
     width: 100%;
     min-height: 15vh;
@@ -8,6 +8,7 @@
   .logo-container {
     background-color: white;
     width: 260px;
+    border-radius: 0.5rem;
   }
   .logo {
     width: 260px;
@@ -15,7 +16,7 @@
   }
   .footerLinkTitle {
     font-weight: '700';
-    color: #bec1cc;
+    color: #fff;
     font-size: 1.8rem;
     margin: 20px 0
   }
@@ -23,7 +24,7 @@
     margin-top: 10px;
   }
   .footerLink {
-    color: #bec1cc;
+    color: #fff;
     margin: 10px 0
   }
 
@@ -49,6 +50,15 @@
     min-height: 15vh;
     height: auto;
     justify-content: center;
+  }
+
+  .footer-text {
+    color: #fff;
+    text-align: center;
+    padding: 15px 0;
+    p {
+      font-size: 1rem;
+    }
   }
 
   a .footerLink {
