--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -21,11 +21,13 @@
     margin: 20px 0
   }
   .links-container {
-    margin-top: 10px;
+    margin-top: 5px !important;
   }
+
   .footerLink {
     color: #fff;
-    margin: 10px 0
+    margin: 20px 0;
+    margin-left: 10px;
   }
 
   @media (max-width: 600px) {
