--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,109 +1,112 @@
 .footer {
-    background: #6A3BC4;
-    padding: 20px;
-    width: 100%;
-    min-height: 15vh;
-    height: auto;
-  }
-  .logo-container {
-    background-color: white;
-    width: 300px;
-    border-radius: .5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px 0;
-    margin-bottom: 10px;
-  }
-  .logo {
-    width: 260px;
-    height: auto;
-  }
-  .footerLinkTitle {
-    font-weight: '700';
-    color: #fff;
-    font-size: 1.8rem;
-    margin: 20px 0
-  }
-  .links-container {
-    margin-top: 5px !important;
-  }
+  background: #6a3bc4;
+  padding: 20px;
+  width: 100%;
+  min-height: 15vh;
+  height: auto;
+}
+.logo-container {
+  background-color: white;
+  width: 300px;
+  border-radius: 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 0;
+  margin-bottom: 10px;
+}
+.logo {
+  width: 260px;
+  height: auto;
+}
+.footerLinkTitle {
+  font-weight: '700';
+  color: #fff;
+  font-size: 1.8rem;
+  margin: 20px 0;
+}
+.links-container {
+  margin-top: 5px !important;
+}
 
-  .footerLink {
-    color: #fff;
-    margin: 20px 0;
-    margin-left: 10px;
-  }
+.footerLink-box {
+  text-align: center;
+}
 
-  .MuiSvgIcon-fontSizeLarge {
-    font-size: 4rem;
-  }
+.footerLink {
+  color: #fff;
+  margin: 20px 0;
+  margin-left: 10px;
+}
 
-  .footer-icon-column {
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+.MuiSvgIcon-fontSizeLarge {
+  font-size: 4rem;
+}
 
-  @media (max-width: 600px) {
-    .footer {
-      align-items: flex-start !important;
-    }
+.footer-icon-column {
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-    .footerLink-box {
-      display: flex;
-      justify-content: center;
-    }
-  }
-  
+@media (max-width: 600px) {
   .footer {
-    padding: 115px 0 50px 0;
-    align-items: center;
+    align-items: flex-start !important;
+  }
+
+  .footerLink-box {
     display: flex;
-    flex-direction: 'column';
-    background: #4e3b80;
-    padding: 20px;
-    top: 0;
-    width: 100%;
-    min-height: 15vh;
-    height: auto;
     justify-content: center;
   }
+}
 
-  .footer-text {
-    color: #fff;
-    text-align: center;
-    padding: 15px 0;
-    p {
-      font-size: 1rem;
-    }
+.footer {
+  padding: 115px 0 50px 0;
+  align-items: center;
+  display: flex;
+  flex-direction: 'column';
+  background: #4e3b80;
+  padding: 20px;
+  top: 0;
+  width: 100%;
+  min-height: 15vh;
+  height: auto;
+  justify-content: center;
+}
+
+.footer-text {
+  color: #fff;
+  text-align: center;
+  padding: 15px 0;
+}
+
+p {
+  font-size: 1rem;
+}
+
+a .footerLink {
+  color: #fff;
+  margin: 0 20px;
+}
+
+.logo img {
+  width: 50%;
+}
+
+.footer-box {
+  width: 100%;
+}
+
+@media (min-width: 600px) {
+  .legals {
+    display: flex;
+    justify-content: center;
+    flex: 1;
+    /* gap: 260px; */
   }
+}
 
-  a .footerLink {
-    color: #fff;
-    margin: 0 20px;
-  }
-
-  .logo img {
-      width: 50%;
-    }
-
-    .footer-box {
-      width: 100%;
-    }
-
-    @media (min-width: 600px) {
-      .legals {
-        display: flex;
-        justify-content: center;
-        flex: 1;
-        gap: 260px;
-      }
-    }
-
-    .legals {
-      width: 100%;
-    }
-
-
+.legals {
+  width: 100%;
+}
